test/compilable/imports/package10022/a.d

module imports.package10022.a;

void funa() {}
