test/fail_compilation/fail87.d
auto a = .a; void main(){}

